Changelog HiFiBerry DSP toolkit
===============================

0.13
 - added automute settings to DSP profiles
 - Bugfix REW filters right
 - added the option to use biquad filter coefficients in settings files

0.12.3
 - Bugfix set-rew-filters
 - Bugfix: Does not start with --alsa if no profile is deployed

0.12.2 (20180904)
 - Bugfix in ALSA volume control  (did not work before deploying a new
   profile)
 - Better handling of incorrect write requests

0.12.1 (20180720)
 - fixed a bug, "mergeparameters" was not included in 0.12 release

0.12 (20180720)
 - moved data to /var/lib/hifiberry
 - added "mergeparameters" command line tool

0.11 (20180719)
 - Bugfix: REW filters are working again
 - implemented store and store-filter commands that persist DSP settings 
   to the EEPROM
 - renamed some command to make them more consistent
    * apply- commands apply settings to the DSP RAM, these will be lost 
      after a DSP reset
    * store- commands store settings to the DSP's EEPROM

0.10 (20180719)
 - settings files allow to overwrite parameters in the DSPProfile. 
   This allows to create crossovers and equalisations directly in the
   DSP profile without the need to use SigmaStudio to create a new
   profile

0.9 (20180716)
 - Renamed filter attributes
 - install-profile command now also works on remote servers
 - Zeroconf support to find all SigmaTCP instances on the local network
 - XML file rework code added (not yet used)

0.8.1 (20180713)
 - Bugfix in ALSA control create code

0.8 (20180713)
 - ALSA volume control
 - automatic detection of program uploads from SigmaStudio

0.7 (20180712)
 - cache program checksum
 - dsptoolkit client program now used XML file provided by sigmatcpserver
   (required major code cleanup)
 - added mute/unmute function
 - added samplerate function

0.6.1 (20180710)
 - bugfix reading and writing volume levels
 - implemented read-prog command

0.6 (20180710)
 - added more functions to read registers and XML metadata